[project]
name = "maru-lang"
version = "0.0.0"
description = "LLM-powered chatbot with RAG and LangGraph pipelines"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "KC ML2"},
]
keywords = ["llm", "chatbot", "rag", "ai", "fastapi", "langgraph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Web framework
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "fastapi-pagination>=0.12.0",
    # CLI
    "typer[all]>=0.9.0",
    # ORM / DB
    "tortoise-orm[asyncpg]>=0.20.0",
    "aerich>=0.7.2",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    # HTTP / WebSocket
    "httpx>=0.24.0",
    "websockets>=12.0",
    # Config
    "pyyaml>=6.0.0",
    # VectorDB
    "chromadb>=0.4.0",
    # LangChain / LangGraph
    "langgraph>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-text-splitters>=0.3.0",
    # Reranker
    "sentence-transformers>=2.2.0",
    # Document parsers
    "unstructured[pdf]>=0.10.0",
    "python-docx>=0.8.11",
    "python-pptx>=0.6.21",
    "openpyxl>=3.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "aerich[toml]>=0.7.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {where = ["."], include = ["maru_lang*"]}}
include-package-data = true

[tool.setuptools.package-data]
maru_lang = [
    "templates/**/*.yaml",
    "templates/**/*.yml",
    "templates/**/*.py",
    "templates/**/*.md",
    "core/relation_db/migrations/**/*.sql",
    "core/relation_db/migrations/**/*.py",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
markers = [
    "integration: integration tests (require API keys)",
]

[tool.coverage.run]
source = ["maru_lang"]
omit = [
    "maru_lang/core/relation_db/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
]

[project.scripts]
maru = "maru_lang.cli:app"

[tool.aerich]
tortoise_orm = "maru_lang.core.relation_db.TORTOISE_ORM"
location = "./maru_lang/core/relation_db/migrations"
src_folder = "./."
