[project]
name = "maru-lang"
version = "0.0.0"
description = "LLM-powered chatbot with RAG and LangGraph pipelines"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "KC ML2"},
]
keywords = ["llm", "chatbot", "rag", "ai", "fastapi", "langgraph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Web framework
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "fastapi-pagination>=0.12.0",
    # CLI
    "typer[all]>=0.9.0",
    "prompt_toolkit>=3.0.0",
    # ORM / DB
    # Pinned <1.0: tortoise 1.x switched connections to context-scoped
    # (TortoiseContext), which breaks the app's RegisterTortoise-at-startup
    # lifespan pattern (see issue: tortoise 1.x migration).
    "tortoise-orm[asyncpg]>=0.20.0,<1.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    # HTTP / WebSocket
    "httpx>=0.24.0",
    "websockets>=12.0",
    # Task queue (optional ingest offloading; activated by task_queue_enabled)
    "arq>=0.25.0",
    # Config
    "pyyaml>=6.0.0",
    # VectorDB
    "chromadb>=0.4.0",
    # LangChain / LangGraph
    "langgraph>=0.3.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-huggingface>=0.1.0",
    "langchain-text-splitters>=0.3.0",
    # Reranker
    "sentence-transformers>=2.2.0",
    # MCP (KorDoc parser; activated by kordoc_mcp_enabled). The KorDoc server
    # itself runs via `npx -y kordoc mcp`; this is the Python stdio client.
    "mcp>=1.0.0",
    # Observability (LLM tracing; activated by langfuse.enabled). Inactive
    # unless configured, but the LangChain callback import lives in the package.
    # langfuse's langchain integration imports the umbrella `langchain` package
    # (for version detection), so it's required alongside langchain-core.
    "langfuse>=3.0.0",
    "langchain>=0.3.0",
    # Document parsers
    "unstructured[pdf]>=0.10.0",
    "msoffcrypto-tool>=5.0.0",
    "python-docx>=0.8.11",
    "docx2txt>=0.8",
    "python-pptx>=0.6.21",
    "openpyxl>=3.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {where = ["."], include = ["maru_lang*"]}}
include-package-data = true

[tool.setuptools.package-data]
maru_lang = [
    "templates/**/*.yaml",
    "templates/**/*.yml",
    "templates/**/*.py",
    "templates/**/*.md",
    "templates/**/*.txt.example",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
# Default: skip integration tests (require API keys / real models / local services).
# CI runs them explicitly via separate `pytest -m integration` job (.github/workflows/test.yml).
# Opt-in locally with: `pytest -m integration` or `pytest -m ""`.
addopts = "-m 'not integration'"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
markers = [
    "integration: integration tests (require API keys and real models)",
    "llm_smoke: real-LLM smoke tests run via `maru test` (gated by MARU_TEST_CONFIG_DIR)",
]

[tool.coverage.run]
source = ["maru_lang"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == '__main__':",
]

[project.scripts]
maru = "maru_lang.cli:app"
